--- a/order-ms/pom.xml
+++ b/order-ms/pom.xml
@@ -60,6 +60,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
 
 		<!-- Javanica project makes easier the use of Hystrix by the introduction of support annotations. -->
 		<!-- Used in Asynchronous Execution -->
