--- a/restaurant-ms/pom.xml
+++ b/restaurant-ms/pom.xml
@@ -45,6 +45,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
