--- a/order-ms/src/main/resources/bootstrap.yml
+++ b/order-ms/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: orderMS
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://didoMS:did0Pass@localhost:8888
       fail-fast: true
   profiles:
     active: dev
