--- a/zuul-server/src/main/resources/bootstrap.yml
+++ b/zuul-server/src/main/resources/bootstrap.yml
@@ -3,5 +3,5 @@ spring:
     name: zuul
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://didoMS:did0Pass@localhost:8888
       fail-fast: true
